k3s/monitoring/extras/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: monitoring-basic-auth
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.home`)
      kind: Rule
      middlewares:
        - name: monitoring-auth
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.home`)
      kind: Rule
      middlewares:
        - name: monitoring-auth
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: monitoring-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-redirect
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.home`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`prometheus.home`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
    - match: Host(`alertmanager.home`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
